# agentic-youtube-admin

./: .gitignore  CLAUDE.md  Dockerfile.server  README.md  biome.json  bts.jsonc  database.md  design.md  package.json  render.yaml  start.sh  tools-reference.md  tsconfig.json
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/server/src/mastra/: index.ts
apps/server/src/mastra/workflows/: owned-channel-backfill.ts  owned-channel-daily-sync.ts  tracked-daily-poll.ts  transcription.ts
apps/server/src/middleware/: interactive-auth.ts
apps/server/src/modules/arcade-auth/: arcade-auth.routes.ts  index.ts  pending-redirects.ts
apps/server/src/modules/interactive-session/: index.ts  interactive-session.pagination.ts  interactive-session.routes.ts
apps/server/src/modules/notification/: index.ts  notification.routes.ts  notification.service.ts  notification.types.ts  slack-auth.routes.ts  slack-delivery.service.ts  slack-message.formatter.ts
apps/server/src/modules/scanner/: index.ts  scanner.routes.ts  scanner.service.ts
apps/server/src/modules/scheduler/: index.ts  (+4 more)
apps/web/: components.json  index.html  package.json  tsconfig.json
apps/web/src/: index.css  routeTree.gen.ts
apps/web/src/components/: header.tsx  mode-toggle.tsx  sign-in-form.tsx  sign-up-form.tsx  slack-channel-picker.tsx  user-menu.tsx
apps/web/src/lib/: api.ts  auth-client.ts
apps/web/src/routes/: __root.tsx  channels.$channelId.tsx  consent.tsx  dashboard.tsx  scans.tsx  settings.tsx  tracking.$channelId.tsx  tracking.$handle.tsx  tracking.index.tsx  tracking.tsx
arcade_interactive_session/: pyproject.toml
arcade_interactive_session/src/arcade_interactive_session/: elysia_client.py  server.py
scripts/: create-migration.sh
youtube_tools/: pyproject.toml
youtube_tools/src/youtube_tools/: server.py
yt-proxy/: Dockerfile  requirements.txt  start.sh
yt-proxy/app/: captions.py  main.py  whisper.py
(+8 files in other folders)
