[project]
name = "arcade_interactive_session"
version = "1.3.0"
description = "Interactive Session MCP Server — remote control for the YouTube analytics platform"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp>=1.9.0",
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.9.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.entry-points.arcade_toolkits]
toolkit_name = "arcade_interactive_session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcade_interactive_session"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = false
