[project]
name = "youtube_tools"
version = "1.0.0"
description = "YouTube Data & Analytics MCP Server — owned channel analytics + public channel tracking"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp>=1.9.0",
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "httpx>=0.28.0,<1.0.0",
    "isodate>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.9.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.entry-points.arcade_toolkits]
toolkit_name = "youtube_tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_tools"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = false
